--- a/posts/pranje-klime.mdx
+++ b/posts/pranje-klime.mdx
@@ -7,7 +7,7 @@ import BlogImage from '@/components/BlogImage'
 
 <div className="prose prose-lg max-w-none">
 
-## Prva stvar koju treba da znate
+## Nemojte zaboraviti da
 
 Klima uređaj nije samo sredstvo za rashlađivanje – on filtrira vazduh koji svakodnevno udišete. Međutim, bez redovnog profesionalnog čišćenja, klima postaje idealno leglo za buđ, bakterije i prašinu. 
 
