--- a/posts/pranje-klime.mdx
+++ b/posts/pranje-klime.mdx
@@ -7,13 +7,13 @@ import BlogImage from '@/components/BlogImage'
 
 <div className="prose prose-lg max-w-none">
 
-## Nemojte zaboraviti da
+## Trebalo bi da znate
 
 Klima uređaj nije samo sredstvo za rashlađivanje – on filtrira vazduh koji svakodnevno udišete. Međutim, bez redovnog profesionalnog čišćenja, klima postaje idealno leglo za buđ, bakterije i prašinu. 
 
 Zato vam predstavljamo kako izgleda **stručno i temeljno pranje klime u Beogradu**, uz slike iz prakse koje prikazuju razliku pre i posle tretmana.
 
-## Zašto je važno prati klimu?
+## Zašto je važno prati redovno klimu?
 
 Redovno i stručno pranje klima uređaja donosi višestruke koristi:
 
